Fix colori -- Dark Mode da migliorare

--- a/frontend/src/components/DarkMode/css/dark.css
+++ b/frontend/src/components/DarkMode/css/dark.css
@@ -1,5 +1,5 @@
 body.dark-mode {
-  background-color: black;
+  background-color: #101010 ;
   color: white;
   transition: background-color 1s ease-in-out;
 }
